too much work for fixing hover glitching on usertags

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,7 +88,6 @@ p {
     border: 0px;
     border-radius: 50px;
     display: inline-block;
-    margin: 4px;
     padding: 4px 10px;
     font-family: "Poppins", serif;
     color: white;
@@ -99,6 +98,13 @@ p {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    transition: width 0.3s ease;
+}
+
+.usertagcontainer{
+    margin: 4px;
+    display: inline-block;
+    border: 2px dashed red;
 }
 
 .unselectable{
